jsonschemadsl2ecore.trafo.opt/test/test84/validtests/example12.test84
{
	"123":123,
	"$33":33,
	"-&$#":null,
	"a-b$":{
		"foo":"bar"
	},
	"##":{
		"PP_":"something",
		"PP_-a":"something 2"
	}
}  